--- a/silly-story-generator-ja.html
+++ b/silly-story-generator-ja.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Silly story generator</title>
+    <title>バカ話ジェネレータ</title>
 
     <style>
 
@@ -39,15 +39,15 @@
 
   <body>
     <div>
-      <label for="customname">Enter custom name:</label>
+      <label for="customname">主人公の名前を入力して下さい</label>
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-      <label for="日本">日本</label><input id="日本" type="radio" name="ukus" value="日本">
+      <label for="uk">日本</label><input id="ja" type="radio" name="usja" value="ja">
     </div>
     <div>
-      <button class="randomize">Generate random story</button>
+      <button class="randomize">バカ話を表示</button>
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
