--- a/silly-story-generator-ja.html
+++ b/silly-story-generator-ja.html
@@ -43,7 +43,7 @@
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
-      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
+      <label for="us">US</label><input id="us" type="radio" name="usja" value="us" checked>
       <label for="uk">日本</label><input id="ja" type="radio" name="usja" value="ja">
     </div>
     <div>
